Fixed body's overflow

--- a/rr0.scss
+++ b/rr0.scss
@@ -31,6 +31,7 @@ body {
       cursor: wait;
     }
   }
+  overflow: hidden;
 }
 
 aside {
